Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27114

Refactoring: "Generate Getter and Setter" cursor not updated in cpp

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 7.0.0-rc1
    • Qt Creator 6.0.2, Qt Creator 7.0.0-beta2
    • C/C++/Obj-C++ Support
    • None
    • Windows
    • d60c8787cd (qt-creator/qt-creator/7.0) d60c8787cd (qt-creator/qt-creator/master) d60c8787cd (qt-creator/tqtc-qt-creator/7.0) d60c8787cd (qt-creator/tqtc-qt-creator/master) d60c8787cd (qt-creator/qt-creator/qds-3.3)

      When using the refactoring to generate a getter and setter for a private member,

      • the cpp file is updated with the new methods and
      • the editor is switched to show the cpp file.

      However, the cursor is not positions to the generate text lines anymore, but is kept at the place where it was positioned before in the cpp file.

      In large cpp file this leads to some confusion, if the new methods are actually added, if the new place is out of the current visible lines of code.

      Wasn't this different with older versions of QtCreator?

      I would like to have the cursor positions, where the new methods were inserted.

        1. Refactoring_02.zip
          2 kB
          Michael Möllney
        2. image-2022-03-03-20-07-03-861.png
          147 kB
          Michael Möllney
        For Gerrit Dashboard: QTCREATORBUG-27114
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            moellney Michael Möllney
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes